--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "dragula": "^3.7.2",
+    "ng2-dragula": "^1.5.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
